--- a/client/results.html
+++ b/client/results.html
@@ -2,7 +2,7 @@
   <div ng-repeat='song in data.hits | orderBy:"-result.pyongs_count"'>
     <div class='song row' ng-attr-width='{{song.result.pyongs_count}}'>
       <div>Title: {{song.result.title}}</div>
-      <img ng-src="{{song.result.header_image_url}}"/>
+      <img ng-src="{{song.result.header_image_url}}" ng-click="getAnnotations(song.result.id)"/>
     </div>
   </div>
 </div>
