filter out empty results

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
   </head>
   <body>
-    <h1>Graffiti</h1>
+    <h1>Test</h1>
 
     <div ng-view></div>
     
