--- a/client/results.html
+++ b/client/results.html
@@ -1,5 +1,8 @@
 <div class='container' ng-controller="ResultsController">
-  <audio id='current' preload="auto" ng-src="{{data.current}}"controls></audio>
+  <audio id='current' preload="auto" ng-src="{{data.current}}" 
+        type="audio/mp3" controls onloadeddata="this.play()">
+  </audio>
+
   <div ng-repeat='song in data.hits | orderBy:"-result.pyongs_count"' ng-if='song.result.pyongs_count'>
     <div class='song row' ng-attr-width='{{song.result.pyongs_count}}'>
       <div>Title: {{song.result.title}}</div>
