--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html ng-app='graffiti'>
   <head>
     <meta charset="utf-8" />
-    <title>Genius List</title>
+    <title>Test</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
   </head>
