--- a/client/results.html
+++ b/client/results.html
@@ -3,6 +3,8 @@
         type="audio/mp3" controls onloadeddata="this.play()">
   </audio>
 
+  <p>{{data.annotations}}</p>
+
   <div ng-repeat='song in data.hits | orderBy:"-result.pyongs_count"' ng-if='song.result.pyongs_count'>
     <div class='song row' ng-attr-width='{{song.result.pyongs_count}}'>
       <div>Title: {{song.result.title}}</div>
