--- a/client/index.html
+++ b/client/index.html
@@ -10,9 +10,11 @@
     <h1>Test</h1>
 
     <div ng-view></div>
-    
+
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
+    <script src="app/ui-bootstrap-tpls-0.14.3.min.js"></script>
     <script src="app/app.js"></script>
+
   </body>
 </html>
