--- a/client/results.html
+++ b/client/results.html
@@ -3,14 +3,16 @@
         type="audio/mp3" controls onloadeddata="this.play()">
   </audio>
 
-  <p>{{data.annotations}}</p>
+  <div>{{data.annotations}}</div>
 
-  <div ng-repeat='song in data.hits | orderBy:"-result.pyongs_count"' ng-if='song.result.pyongs_count'>
-    <div class='song row' ng-attr-width='{{song.result.pyongs_count}}'>
-      <div>Title: {{song.result.title}}</div>
-      <img ng-src="{{song.result.header_image_url}}" ng-click="getAnnotations(song.result.id)"/>
-    </div>
-  </div>
+  <uib-carousel>
+    <uib-slide ng-repeat='song in data.hits | orderBy:"-result.pyongs_count"' 
+      ng-if='song.result.pyongs_count' active='song.active'>
+        <p>Title: {{song.result.title}}</p>
+        <img ng-src="{{song.result.header_image_url}}" ng-click="getAnnotations(song.result.id)"/>
+      </div>
+    </uib-slide>
+  </uib-carousel>
 </div>
 
 
