chunky search bar

--- a/client/home.html
+++ b/client/home.html
@@ -1,7 +1,5 @@
 <div id='container' ng-controller="HomeController">
   <form ng-submit="getData()">
-    <input name="artist" type="text" ng-model="data.artist" placeholder="enter artist" required/>
-    <br>
-    <button>Submit!</button>
+    <input class='form-control input-lg' name="artist" type="text" ng-model="data.artist" placeholder="enter artist..." required/>
   </form>
 </div>
