interval setting and clearing with new song

--- a/client/index.html
+++ b/client/index.html
@@ -4,15 +4,17 @@
     <meta charset="utf-8" />
     <title>Test</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
+    <link href='https://fonts.googleapis.com/css?family=Maven+Pro' rel='stylesheet' type='text/css'>    
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
   </head>
   <body>
-    <h1>Test</h1>
+    <h1>TEST</h1>
 
     <div ng-view></div>
 
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
+    <script src="lib/angular-nlp-compromise/src/angular-nlp-compromise.js"></script>
     <script src="app/ui-bootstrap-tpls-0.14.3.min.js"></script>
     <script src="app/app.js"></script>
 
