--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,9 @@
     <script src="lib/angular-nlp-compromise/src/angular-nlp-compromise.js"></script>
     <script src="app/ui-bootstrap-tpls-0.14.3.min.js"></script>
     <script src="app/app.js"></script>
+    <script src="app/services.js"></script>
+    <script src="app/home.js"></script>
+    <script src="app/songs.js"></script>
 
   </body>
 </html>
