--- a/client/results.html
+++ b/client/results.html
@@ -1,3 +1,18 @@
+<nav class="navbar">
+  <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#/home">Brand</a>
+      </div>
+  </div>
+</nav>
+
+
 <div class='container' ng-controller="ResultsController">
 
   <div class = "row">
