--- a/client/results.html
+++ b/client/results.html
@@ -14,24 +14,19 @@
 
 
 <div class='container' ng-controller="ResultsController">
-
   <div class = "row">
-
     <div class='annotations'>
-      <span class='note'>{{data.note}}</span>
+      <span class='note'>{{data.annotations}}</span>
     </div>
-
   </div>
 
   <div class = "row">
-
     <div class = "music">
-
       <uib-carousel>
         <uib-slide ng-repeat='song in data.hits | orderBy:"-result.pyongs_count"' 
           ng-if='song.result.pyongs_count' active='song.active'>
             <p class='caption'>{{song.result.title}}</p>
-            <img ng-src="{{song.result.header_image_url}}" ng-click="getAnnotations(song.result.id)"/>
+            <img ng-src="{{song.result.header_image_url}}" ng-click="getAnnotations(song.result.id, song.result.title)"/>
         </uib-slide>
       </uib-carousel>
 
@@ -40,9 +35,7 @@
       </audio>
 
     </div>
-
   </div>
-
 </div>
 
 
