--- a/client/results.html
+++ b/client/results.html
@@ -12,6 +12,11 @@
   </div>
 </nav>
 
+<div class='embed-responsive embed-responsive-16by9 video-wrapper'>
+  <iframe width="420" height="315" ng-src="{{data.video}}" frameborder="0" allowfullscreen></iframe>
+</div>
+
+
 
 <div class='container' ng-controller="ResultsController">
   <div class = "row">
@@ -22,6 +27,7 @@
 
   <div class = "row">
     <div class = "music">
+
       <uib-carousel>
         <uib-slide ng-repeat='song in data.hits | orderBy:"-result.pyongs_count"' 
           ng-if='song.result.pyongs_count' active='song.active'>
@@ -30,9 +36,9 @@
         </uib-slide>
       </uib-carousel>
 
-      <audio id='current' preload="auto" ng-src="{{data.current}}" 
+      <!-- <audio id='current' preload="auto" ng-src="{{data.current}}" 
             type="audio/mp3" controls onloadeddata="this.play()">
-      </audio>
+      </audio> -->
 
     </div>
   </div>
