--- a/client/results.html
+++ b/client/results.html
@@ -12,11 +12,9 @@
   </div>
 </nav>
 
-<div class='embed-responsive embed-responsive-16by9 video-wrapper'>
+<div class='video-container embed-responsive embed-responsive-16by9 video-wrapper'>
   <iframe width="420" height="315" ng-src="{{data.video}}" frameborder="0" allowfullscreen></iframe>
 </div>
-
-
 
 <div class='container' ng-controller="ResultsController">
   <div class = "row">
