--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,19 @@
   </head>
   <body>
 
+      <nav class="navbar">
+        <div class="container-fluid">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="#/home">GRAFFITI</a>
+            </div>
+        </div>
+      </nav>
+
     <div ng-view></div>
 
     <script src="lib/angular/angular.js"></script>
