add purple mask and home nav glyphicon

--- a/client/home.html
+++ b/client/home.html
@@ -1,3 +1,7 @@
+<div class = "header" href="#/home">
+  <h1 class="brand">Graffiti</h1>
+</div>
+
 <div id='container' ng-controller="HomeController">
   <form ng-submit="getData()">
     <input class='form-control input-lg' name="artist" type="text" ng-model="data.artist" placeholder="enter artist..." required/>
