--- a/client/results.html
+++ b/client/results.html
@@ -1,3 +1,8 @@
+
+<button type="button" class="btn btn-default home" ng-click="redirect()">
+  <span class="glyphicon glyphicon-home" aria-hidden="true" href="#/home"></span>
+</button>
+
 <div class='video-container embed-responsive embed-responsive-16by9 video-wrapper'>
   <iframe width="420" height="315" ng-src="{{data.video}}" frameborder="0" allowfullscreen></iframe>
 </div>
