changed site title in index html

--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html ng-app='graffiti'>
   <head>
     <meta charset="utf-8" />
-    <title>Test</title>
+    <title>Graffiti</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
     <link href='https://fonts.googleapis.com/css?family=Maven+Pro' rel='stylesheet' type='text/css'>    
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
