--- a/client/index.html
+++ b/client/index.html
@@ -13,10 +13,7 @@
 
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
-    <script src="lib/angular-nlp-compromise/src/angular-nlp-compromise.js"></script>
-    <script src="app/ui-bootstrap-tpls-0.14.3.min.js"></script>
-    <script src="https://www.youtube.com/iframe_api"></script>
-    <script src="lib/angular-youtube-mb/src/angular-youtube-embed.js"></script>
+    <script src="lib/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="app/app.js"></script>
     <script src="app/services.js"></script>
     <script src="app/home.js"></script>
